// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Snapshots > renders default layout correctly 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade


Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results


























Notifications
Composer
"
`;

exports[`App > Snapshots > renders screen reader layout correctly 1`] = `
"Notifications
Footer

  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade


Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results
Composer"
`;

exports[`App > Snapshots > renders with dialogs visible 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade
































Notifications
DialogManager
"
`;

exports[`App > should render ToolConfirmationQueue along with Composer when tool is confirming and experiment is on 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade


Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results
HistoryItemDisplay
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                                                                      │
│                                                                                                                      │
│ ?  ls list directory                                                                                                 │
│                                                                                                                      │
│ ls                                                                                                                   │
│ Allow execution of: 'ls'?                                                                                            │
│                                                                                                                      │
│ ● 1. Allow once                                                                                                      │
│   2. Allow for this session                                                                                          │
│   3. No, suggest changes (esc)                                                                                       │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯












Notifications
Composer
"
`;
